# ThinkingRoot

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  ThinkingRoot-Pitch.pptx  compile-retrieve-architecture.md  eval_prep.py  eval_prep2.py  install.ps1  install.sh  marketingposition.md  thinkingrootcloudsaasplan.md
apps/thinkingroot-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/thinkingroot-cli/: Cargo.toml
crates/thinkingroot-cli/src/: brain_cmd.rs  brain_code.rs  branch_cmd.rs  branch_data_cmd.rs  branch_extras_cmd.rs  branch_template_cmd.rs  claims_cmd.rs  compliance_cmd.rs  cortex_client.rs  cortex_remote.rs  doctor_cmd.rs  engram_cmd.rs  eval_cmd.rs  flow_cmd.rs  function_cmd.rs  lib.rs  main.rs  mcp_cmd.rs  mcp_config.rs  mount_cmd.rs  otel.rs  pack_cmd.rs  pipeline.rs  progress.rs  prompt_cmd.rs  proposal_cmd.rs  provider_cmd.rs  reflect_cmd.rs  render_cmd.rs  retrieve_cmd.rs  rooting_cmd.rs  secrets_cmd.rs  serve.rs  service.rs  setup.rs  status_cmd.rs  summary_printer.rs  tag_cmd.rs  update_cmd.rs  watch.rs  (+1 more)
crates/thinkingroot-cli/tests/: cortex_scenarios.rs  doctor_canned_envs.rs  doctor_subcommand.rs  hash_file_smoke.rs  summary_printer_test.rs  watch_test.rs
crates/thinkingroot-cloud-auth/: Cargo.toml
crates/thinkingroot-cloud-auth/src/: auth_flow.rs  config.rs  deep_link_bus.rs  error.rs  http.rs  lib.rs  me.rs  models_catalogue.rs  secrets.rs
crates/thinkingroot-cloud-auth/tests/: browser_flow_smoke.rs  concurrent_writers.rs  fake_cloud.rs  models_catalogue.rs  schema_migration.rs
crates/thinkingroot-core/: Cargo.toml
crates/thinkingroot-core/src/: config.rs  cortex.rs  error.rs  filesystem.rs  global_config.rs  install_manifest.rs  ir.rs  lib.rs  permissions.rs  recovery_log.rs  resolver.rs  restart_state.rs  safe_path.rs  structural_registry.rs
crates/thinkingroot-core/tests/: install_manifest_concurrent.rs
crates/thinkingroot-cortex-async/: Cargo.toml
crates/thinkingroot-cortex-async/src/: lib.rs
crates/thinkingroot-extract/: Cargo.toml  build.rs
crates/thinkingroot-extract/src/: ast_split.rs  audio_rules.rs  batch.rs  cache.rs  checkpoint.rs  citation.rs  comment_claims.rs  events.rs  expiration.rs  extractor.rs  extractor_consts.rs  fact_quality.rs  focused_prompts.rs  graph_context.rs  image_rules.rs  lib.rs  llm.rs  lsp_rules.rs  parse_doc_rules.rs  prompts.rs  prose_split.rs  quantity.rs  router.rs  rule_catalog.rs  scheduler.rs  schema.rs  segment.rs  sensitivity.rs  structural.rs  supersession.rs  temporal.rs  test_assertions.rs  typed_edges.rs  video_rules.rs  witness_mesh.rs
crates/thinkingroot-extract/tests/: cloud_managed_chat.rs  streaming_smoke.rs
crates/thinkingroot-flow/: Cargo.toml
crates/thinkingroot-flow/src/: definition.rs  error.rs  lib.rs  runtime.rs  storage.rs  validator.rs
crates/thinkingroot-flow/tests/: multi_agent_os_smoke.rs
crates/thinkingroot-graph/: Cargo.toml
crates/thinkingroot-graph/src/: aep_queries.rs  agents.rs  answer_cache.rs  artifact_nodes.rs  atomic_fact_inserts.rs  capsule.rs  codegraph.rs  cognition_inserts.rs  cognition_merge.rs  compile_jobs.rs  concept_inserts.rs  graph.rs  hybrid_queries.rs  lib.rs  ort_session.rs  per_source_rows.rs  plasticity.rs  prompt.rs  rerank.rs  root_function.rs  row_blake3.rs  rows.rs  source_store.rs  spine_inserts.rs  spreading_activation.rs  structural_inserts.rs  summaries.rs  trajectory.rs  vector.rs  vector_quant.rs  witness_inserts.rs
crates/thinkingroot-graph/tests/: ann_recall_test.rs  materialize_statement_test.rs
crates/thinkingroot-ground/: Cargo.toml
crates/thinkingroot-ground/src/: dedup.rs  grounder.rs  lexical.rs  lib.rs  nli.rs  semantic.rs  witness_verifier.rs
crates/thinkingroot-llm/: Cargo.toml
crates/thinkingroot-llm/src/: checkpoint.rs  events.rs  lib.rs  llm.rs  prompts.rs  readme.rs
crates/thinkingroot-llm/tests/: cloud_managed_chat.rs  streaming_smoke.rs
crates/thinkingroot-paper/: Cargo.toml
crates/thinkingroot-paper/src/: frontmatter.rs  lib.rs  mermaid.rs  narrate.rs  sections.rs  synthesizer.rs
crates/thinkingroot-pr/: Cargo.toml
crates/thinkingroot-pr/src/: lib.rs
crates/thinkingroot-reflect/: Cargo.toml
crates/thinkingroot-reflect/src/: engine.rs  lib.rs  types.rs
crates/thinkingroot-reflect/tests/: cross_workspace_test.rs  engine_test.rs
crates/thinkingroot-rooting/: Cargo.toml
crates/thinkingroot-rooting/src/: certificate.rs  config.rs  lib.rs  rooter.rs  source_store.rs  storage.rs  verdict.rs
crates/thinkingroot-rooting/tests/: contribute_gate.rs  injection_corpus.rs  rooter_end_to_end.rs
crates/thinkingroot-sandbox/: Cargo.toml
crates/thinkingroot-sandbox/src/: error.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/thinkingroot-serve/: Cargo.toml
crates/thinkingroot-serve/benches/: incremental_smoke.rs
crates/thinkingroot-serve/src/: acquisition_tools.rs  activity.rs  backfill.rs  branch_cache.rs  consolidation.rs  cron.rs  egress.rs  engine.rs  fingerprint.rs  flow_cron.rs  fs_ops.rs  graph.html  graph.rs  graph_cache.rs  lib.rs  live_sync.rs  maintenance.rs  operator_tools.rs  pipeline.rs  rest.rs  root_function_runtime.rs  scheduler.rs  structural_persist.rs  sys_fs_ops.rs  system_power.rs  workspace_state.rs  workspace_watcher.rs
crates/thinkingroot-serve/tests/: adversarial_kvc_test.rs  aep_lifecycle.rs  agent_state_topology_test.rs  as_of_query_test.rs  branch_cache_integration_test.rs  branch_cache_test.rs  branch_events_sse_test.rs  branch_nodes_test.rs  branch_templates_test.rs  branch_views_test.rs  connector_bulk_test.rs  consolidation_test.rs  contract_invariants.rs  rest_test.rs  (+29 more)
crates/tr-c2pa/: Cargo.toml
crates/tr-format/: Cargo.toml
crates/tr-identity/: Cargo.toml
crates/tr-render/: Cargo.toml
crates/tr-revocation/: Cargo.toml
crates/tr-sigstore/: Cargo.toml
crates/tr-transparency/: Cargo.toml
crates/tr-verify/: Cargo.toml
thinkingroot-python/: Cargo.toml  README.md  pyproject.toml
thinkingroot-python/src/: lib.rs
thinkingroot-python/tests/: test_brain_facade.py  test_branch_methods.py
(+543 files in other folders)
