[workspace]
resolver = "2"
members = [
    "crates/thinkingroot-core",
    "crates/thinkingroot-cortex-async",
    "crates/thinkingroot-graph",
    "crates/thinkingroot-parse",
    "crates/thinkingroot-extract",
    "crates/thinkingroot-llm",
    "crates/thinkingroot-paper",
    "crates/thinkingroot-link",
    "crates/thinkingroot-compile",
    "crates/thinkingroot-health",
    "crates/thinkingroot-serve",
    "crates/thinkingroot-branch",
    "crates/thinkingroot-pr",
    "crates/thinkingroot-ground",
    "crates/thinkingroot-reflect",
    "crates/thinkingroot-cli",
    "crates/thinkingroot-bench",
    "crates/thinkingroot-cloud-auth",
    "crates/tr-format",
    "crates/tr-identity",
    "crates/tr-render",
    "crates/tr-revocation",
    "crates/tr-sigstore",
    "crates/tr-transparency",
    "crates/tr-verify",
    "crates/thinkingroot-sandbox",
    "thinkingroot-python",
]
# thinkingroot-python is a PyO3 cdylib that must be built via maturin.
# Excluded from default-members so `cargo build` / `cargo test` don't try to
# link it without Python headers.  `cargo check --workspace` still validates it.
default-members = [
    "crates/thinkingroot-core",
    "crates/thinkingroot-cortex-async",
    "crates/thinkingroot-graph",
    "crates/thinkingroot-parse",
    "crates/thinkingroot-extract",
    "crates/thinkingroot-llm",
    "crates/thinkingroot-paper",
    "crates/thinkingroot-link",
    "crates/thinkingroot-compile",
    "crates/thinkingroot-health",
    "crates/thinkingroot-serve",
    "crates/thinkingroot-branch",
    "crates/thinkingroot-pr",
    "crates/thinkingroot-ground",
    "crates/thinkingroot-reflect",
    "crates/thinkingroot-cli",
    "crates/thinkingroot-bench",
    "crates/thinkingroot-cloud-auth",
    "crates/tr-format",
    "crates/tr-identity",
    "crates/tr-render",
    "crates/tr-revocation",
    "crates/tr-sigstore",
    "crates/tr-transparency",
    "crates/tr-verify",
    "crates/thinkingroot-sandbox",
]

[workspace.package]
version = "0.9.1"
edition = "2024"
authors = ["Naveen <naveen@thinkingroot.dev>"]
license = "MIT"
repository = "https://github.com/DevbyNaveen/ThinkingRoot"
homepage = "https://thinkingroot.dev"
documentation = "https://docs.thinkingroot.dev"
rust-version = "1.91"
keywords = ["knowledge-compiler", "ai-agents", "mcp", "memory", "knowledge-graph"]
categories = ["development-tools", "database", "parser-implementations"]

[workspace.dependencies]
# Internal crates
thinkingroot-core    = { path = "crates/thinkingroot-core",    version = "0.9.0" }
thinkingroot-cortex-async = { path = "crates/thinkingroot-cortex-async", version = "0.9.0" }
thinkingroot-graph   = { path = "crates/thinkingroot-graph",   version = "0.9.0", default-features = false }
thinkingroot-parse   = { path = "crates/thinkingroot-parse",   version = "0.9.0" }
thinkingroot-extract = { path = "crates/thinkingroot-extract", version = "0.9.0" }
thinkingroot-llm     = { path = "crates/thinkingroot-llm",     version = "0.9.1" }
thinkingroot-paper   = { path = "crates/thinkingroot-paper",   version = "0.9.1" }
thinkingroot-link    = { path = "crates/thinkingroot-link",    version = "0.9.0" }
thinkingroot-compile = { path = "crates/thinkingroot-compile", version = "0.9.0" }
thinkingroot-health  = { path = "crates/thinkingroot-health",  version = "0.9.0" }
thinkingroot-serve   = { path = "crates/thinkingroot-serve",   version = "0.9.0", default-features = false }
thinkingroot-branch  = { path = "crates/thinkingroot-branch",  version = "0.9.0", default-features = false }
thinkingroot-pr      = { path = "crates/thinkingroot-pr",      version = "0.9.0" }
thinkingroot-ground  = { path = "crates/thinkingroot-ground",  version = "0.9.0", default-features = false }
thinkingroot-reflect = { path = "crates/thinkingroot-reflect", version = "0.9.0" }
thinkingroot-cloud-auth = { path = "crates/thinkingroot-cloud-auth" }
tr-format            = { path = "crates/tr-format",            version = "1.0.0" }
tr-identity          = { path = "crates/tr-identity",          version = "0.9.1" }
tr-render            = { path = "crates/tr-render",            version = "0.9.1" }
tr-revocation        = { path = "crates/tr-revocation",        version = "0.9.1" }
tr-sigstore          = { path = "crates/tr-sigstore",          version = "0.9.1" }
tr-transparency      = { path = "crates/tr-transparency",      version = "0.9.1" }
tr-verify            = { path = "crates/tr-verify",            version = "0.9.1" }
thinkingroot-sandbox = { path = "crates/thinkingroot-sandbox",   version = "0.9.1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1.3"

# Async
tokio = { version = "1.51", features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
blake3 = "1"

# Cryptography (used by tr-revocation + tr-verify)
ed25519-dalek = "2"
base64        = "0.22"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
dirs = "5"
dialoguer = "0.11"

# Cross-platform PID liveness for the Cortex Protocol singleton
# discovery. Default-features off to keep us out of the system-stats
# code paths we don't need; we only call Process::status() / refresh.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Advisory file locking — used by the Cortex lockfile write path
# (cortex.lock.write sentinel) and by the vector-index cache.
fs2 = "0.4"
# Atomic write-then-rename helper for cortex.lock and other files
# that must never be observed half-written.
tempfile = "3"
# RAII drop-bomb guard used by cloud-auth's browser-flow login to
# clear the in-flight mutex on panic or early return.
scopeguard = "1"

# Graph DB (Datalog-based, embedded, community edition)
cozo = { package = "cozo-ce", version = "0.7.13-alpha.3", default-features = false, features = ["minimal", "rayon"] }

# Parsing
pulldown-cmark = "0.13"
tree-sitter = "0.26"

# LLM (multi-provider via our own trait)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
# Smithy `Document` is the JSON-equivalent type Bedrock's Converse API uses
# for `toolConfig.tools[].toolSpec.inputSchema` and `toolUse.input`. We
# convert serde_json::Value to/from Document when calling
# `LlmClient::chat_with_tools` against the Bedrock backend.
aws-smithy-types = "1"

# Templates
tera = "1"

# HTTP (for serve)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
regex = "1"
glob = "0.3"
ignore = "0.4"
notify = "8"
notify-debouncer-mini = "0.6"
strsim = "0.11"
unicode-segmentation = "1.12"
ordered-float = { version = "5", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Async stream plumbing for LLM SSE streaming. `futures` provides the
# `Stream` trait; `eventsource-stream` parses `text/event-stream` over
# `bytes_stream()`; `async-stream` is the macro the providers use to
# yield chunks idiomatically.
futures = "0.3"
eventsource-stream = "0.2"
async-stream = "0.3"

# Benchmarking
criterion = { version = "0.6", default-features = false, features = ["html_reports"] }
divan = "0.1"
rand = "0.9"

# Browser launcher — used by thinkingroot-cloud-auth's browser-flow login
# to open the hub's /auth/cli URL in the user's default browser.
webbrowser = "1"

# Phase D Wave 1 — system-power tools.
# `arboard` is the maintained clipboard fork from 1Password (dual MIT/Apache).
# `opener` opens files/URLs in the user's default app (MIT/Apache).
# `trash` moves files to the OS native trash, recoverable (MIT/Apache).
# `globset` provides RegexSetBuilder-backed glob matching used both by the
#   `glob` MCP tool and by the permission rule evaluator. (Unlicense/MIT.)
# `nix` is the cross-platform Unix syscall wrapper — only used on Linux for
#   the degraded sandbox fallback (PR_SET_NO_NEW_PRIVS + setrlimit) when
#   bubblewrap is unavailable. Gated by cfg(target_os = "linux") at the
#   consumer site; declared workspace-wide so cargo deny / cargo audit see
#   it. (MIT.)
arboard  = "3"
opener   = "0.7"
trash    = "5"
globset  = "0.4"
nix      = { version = "0.29", features = ["resource", "process", "fs"] }

# Async trait sugar for `thinkingroot-sandbox::Sandbox` (and only that
# trait). Native async-fn-in-trait stabilised in Rust 1.75, but the
# `Box<dyn Sandbox>` object-safety story still requires either the
# pin-box workaround or this crate. We use this crate for clarity.
async-trait = "0.1"

# HTTP mocking for cloud-auth dev tests (wiremock-rs spins up a local
# Axum-backed mock hub).
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = true
lto = "thin"
