[package]
name = "thinkingroot-cli"
description = "CLI binary for ThinkingRoot — the knowledge compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[[bin]]
name = "root"
path = "src/main.rs"

[dependencies]
# `.tr` reader/writer (Phase A relocation — canonical home for the
# wire format). Used by `root pack` and `root install`.
tr-format     = { workspace = true }
# Trust verification + revocation cache for `root install`.
tr-verify     = { workspace = true }
tr-revocation = { workspace = true }
# Human-readable preview rendering for `root install --dry-run`.
tr-render     = { workspace = true }

thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }
thinkingroot-parse = { workspace = true }
thinkingroot-extract = { workspace = true }
thinkingroot-link = { workspace = true }
thinkingroot-compile = { workspace = true }
thinkingroot-verify-internal = { workspace = true }
thinkingroot-serve = { workspace = true }
thinkingroot-branch = { workspace = true }
thinkingroot-ground = { workspace = true }
thinkingroot-rooting = { workspace = true }
thinkingroot-reflect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
dialoguer = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

# Cloud subcommands (`root login`, `root publish`, `root whoami`,
# `root init`, `root status`) — Phase G consolidation. Replace the
# legacy `tr` binary in thinkingroot-cloud/apps/cli.
walkdir = "2"
rpassword = "7"
tar = "0.4"
zstd = { version = "0.13", default-features = false }

# Pluggable resolvers for `root install` (Phase C).
async-trait = "0.1"
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
toml = { workspace = true }
ignore = { workspace = true }

# Used by `root pack --sign` to load Ed25519 signing keys from disk.
ed25519-dalek = { workspace = true }

# `root pack --sign-keyless` drives Sigstore-public-good keyless DSSE
# signing through tr-sigstore's `live` feature — Fulcio cert request,
# DSSE PAE sign with the ephemeral key, Rekor witness submission. The
# `live` feature pulls in sigstore-rs + reqwest + openidconnect; only
# the CLI takes that compile cost (everything else stays lean).
tr-sigstore = { workspace = true, features = ["live"] }

[features]
## Enable neural embedding for semantic search. On by default; disable with
## --no-default-features for faster test builds that skip ONNX Runtime linking.
default = ["vector"]
vector = ["thinkingroot-graph/vector", "thinkingroot-serve/vector", "thinkingroot-branch/vector", "thinkingroot-ground/vector"]

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
semver = { version = "1", features = ["serde"] }
