[package]
name = "thinkingroot-cli"
description = "CLI binary for ThinkingRoot — the knowledge compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[[bin]]
name = "root"
path = "src/main.rs"

[dependencies]
# SHA-256 for `root update` checksum verification. Same major as
# the rest of the workspace; named here directly so update_cmd.rs
# doesn't have to depend on a trust crate for one helper.
sha2 = "0.10"

# Cross-process advisory file lock for the lazy vector-index rebuild.
# Two concurrent `root ask` invocations on the same workspace each
# observed the empty index and embedded the entire claim set twice;
# the second writer wasted the cost and racy-overwrote the first
# writer's index. fs2 wraps flock/LockFileEx so we get correct
# auto-release on process death (no stale-lockfile hazard).
fs2 = "0.4"

# `.tr` reader/writer (Phase A relocation — canonical home for the
# wire format). Used by `root pack` and `root install`.
tr-format     = { workspace = true }
# Trust verification + revocation cache for `root install`.
tr-verify     = { workspace = true }
tr-revocation = { workspace = true }
# Human-readable preview rendering for `root install --dry-run`.
tr-render     = { workspace = true }

thinkingroot-core = { workspace = true }
# Shared async /livez probe — same crate the desktop calls into so
# both surfaces agree on the wire-level probe semantics.
thinkingroot-cortex-async = { workspace = true }
thinkingroot-graph = { workspace = true }
thinkingroot-parse = { workspace = true }
thinkingroot-extract = { workspace = true }
thinkingroot-link = { workspace = true }
thinkingroot-compile = { workspace = true }
thinkingroot-health = { workspace = true }
thinkingroot-serve = { workspace = true }
thinkingroot-branch = { workspace = true }
thinkingroot-ground = { workspace = true }
thinkingroot-rooting = { workspace = true }
thinkingroot-reflect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
dialoguer = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
# Cortex Protocol: typed errors on resolve_engine + remote-delegate
# call paths. The CLI's existing `anyhow::Result<()>` boundary is
# preserved at the subcommand layer; thiserror only carries
# typed-but-internally-erased errors back through the cortex_client
# / cortex_remote modules.
thiserror = { workspace = true }
# Cortex Protocol: SSE consumer for `compile/stream` and
# `ask/stream` over reqwest's bytes_stream.
async-stream = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }

# Cloud subcommands (`root login`, `root publish`, `root whoami`,
# `root init`, `root status`) — Phase G consolidation. Replace the
# legacy `tr` binary in thinkingroot-cloud/apps/cli.
walkdir = "2"
rpassword = "7"
tar = "0.4"
zstd = { version = "0.13", default-features = false }

# `root mount` — replay v3 packs into a fresh CozoDB.  blake3 hashes
# source bytes for the byte-store layout; ulid mints fallback ClaimIds
# when a v3 pack carries non-ULID claim ids (defensive — canonical
# packs always use ULIDs per claims.jsonl spec §3.3).
blake3 = { workspace = true }
ulid = { workspace = true }

# Constant-time byte comparison for the BLAKE3 cross-check in
# `resolver/http.rs` (defense-in-depth against an oracle that could
# leak the registry-advertised hash bit-by-bit through timing).  The
# practical attack surface is small (one comparison per `root install`,
# no remote oracle), but the §10.1 security checklist says "constant-
# time everywhere we can," and `subtle::ConstantTimeEq` costs nothing
# beyond the dep.
subtle = "2"

# Pluggable resolvers for `root install` (Phase C).
async-trait = "0.1"
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
toml = { workspace = true }
ignore = { workspace = true }

# Used by `root pack --sign` to load Ed25519 signing keys from disk.
ed25519-dalek = { workspace = true }

# `root pack --sign-keyless` drives Sigstore-public-good keyless DSSE
# signing through tr-sigstore's `live` feature — Fulcio cert request,
# DSSE PAE sign with the ephemeral key, Rekor witness submission. The
# `live` feature pulls in sigstore-rs + reqwest + openidconnect; only
# the CLI takes that compile cost (everything else stays lean).
tr-sigstore = { workspace = true, features = ["live"] }

[features]
## Enable neural embedding for semantic search. On by default; disable with
## --no-default-features for faster test builds that skip ONNX Runtime linking.
default = ["vector"]
vector = ["thinkingroot-graph/vector", "thinkingroot-serve/vector", "thinkingroot-branch/vector"]

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
semver = { version = "1", features = ["serde"] }
# Cortex integration tests need to spawn the real `root` binary and
# serialise per-test environment overrides (XDG_CONFIG_HOME, ports).
assert_cmd = "2"
serial_test = "3"
