[package]
name = "thinkingroot-cloud-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
fs2 = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "signal", "time", "net"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
ulid = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
thinkingroot-core = { workspace = true, features = ["test-helpers"] }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }
