[package]
name = "thinkingroot-core"
description = "Core types and data model for the ThinkingRoot knowledge compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
ordered-float = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
# Cortex Protocol — PID liveness, atomic write-then-rename,
# advisory locking on the writer-sentinel.
sysinfo = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }
# T2.6 per-branch redaction policy compiles patterns at apply time
# (regex::Regex isn't Serialize, so the policy stores raw strings).
regex = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
serial_test = "3"
