[package]
name = "thinkingroot-cortex-async"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
thinkingroot-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
