[package]
name = "thinkingroot-extract"
description = "Mechanical Witness Mesh extraction (structural, rule-catalog) for ThinkingRoot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[dependencies]
thinkingroot-core = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }
# Witness Mesh rule catalog: static string-keyed map of RuleDescriptor.
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
# build.rs reads Cargo.lock at the workspace root and pins each
# tree-sitter grammar version into `$OUT_DIR/grammar_versions.rs`
# for inclusion in the rule catalog.
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
thinkingroot-core = { workspace = true, features = ["test-helpers"] }
serde_json = { workspace = true }
