[package]
name = "thinkingroot-extract"
description = "Mechanical Witness Mesh extraction (structural, rule-catalog) for ThinkingRoot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[dependencies]
thinkingroot-core = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }
# Witness Mesh rule catalog: static string-keyed map of RuleDescriptor.
phf = { version = "0.11", features = ["macros"] }
# Image-family rules (catalog v1.1) — pure-Rust image decode +
# perceptual hashing + EXIF. No shell-outs, no ffmpeg, no C deps.
# Sized for a CTO-class "drop a folder of photos" path: ~50 MiB of
# stable rust crates that decode JPEG/PNG/GIF/WebP/TIFF/BMP/PNM out
# of the box.
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "webp", "tiff", "bmp", "pnm"
] }
kamadak-exif = "0.5"

[build-dependencies]
# build.rs reads Cargo.lock at the workspace root and pins each
# tree-sitter grammar version into `$OUT_DIR/grammar_versions.rs`
# for inclusion in the rule catalog.
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
thinkingroot-core = { workspace = true, features = ["test-helpers"] }
serde_json = { workspace = true }
