[package]
name = "thinkingroot-graph"
description = "Graph and vector storage for ThinkingRoot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[features]
## Enable neural embedding + cross-encoder reranking via ONNX Runtime.
## Disable for faster test builds or environments where the ~25 MB ORT
## runtime is undesirable. When disabled, VectorStore + CrossEncoder are
## no-ops that return empty search results / identity-ranked scores.
##
## Track 32 (2026-05-16) dropped fastembed in favour of `ort` +
## `tokenizers` direct — fastembed's HF-Hub auto-download was
## incompatible with the install-time bundle contract (`install.sh`
## stages all model files; no lazy network at runtime).
default = ["vector"]
vector = ["dep:ort", "dep:tokenizers"]

[dependencies]
thinkingroot-core = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
cozo = { workspace = true }
blake3 = { workspace = true }
# Direct sqlite handle (same version cozo-ce links) used ONLY to set the
# durable journal mode (WAL) on graph.db at open, before cozo's pooled
# connections attach. WAL persists in the file header so every cozo
# connection inherits it, ending "database is locked" reader/writer
# conflicts under write bursts (e.g. large compiles). No queries run here.
sqlite = "0.36"

# ONNX Runtime bindings — bundles the ORT prebuilt binaries so the
# install one-liner ships a self-contained inference stack. Matches
# the version fastembed v5.13.1 was pulling transitively so the
# Cargo.lock churn is minimal.
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["download-binaries", "tls-rustls", "ndarray", "std"] }
# Hugging Face tokenizers in Rust — same major as fastembed used.
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }

[dev-dependencies]
tempfile = "3"
