[package]
name = "thinkingroot-ground"
description = "Witness Mesh anchor verification — BLAKE3-based byte-anchor check (the surviving 1-of-5 piece of the pre-Witness-Mesh grounding tribunal)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

# `vector` feature deleted in Witness Mesh cutover — the ML judges
# (Judge 3 semantic cosine + Judge 4 NLI cross-encoder) are gone.
# Feature-gating no longer applies. The `ort` + `tokenizers` + `dirs`
# + `thinkingroot-graph` deps that backed them are removed below.

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-extract = { workspace = true }
# `unicode-segmentation` is used by the surviving `LexicalJudge`
# tokenizer (retained for downstream consumers that score lexical
# overlap; the Rooting crate that originally drove it is deleted).
unicode-segmentation = { workspace = true }
tracing = { workspace = true }
# Witness anchor verification — BLAKE3 over source byte slices.
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
