[package]
name = "thinkingroot-ground"
description = "Witness Mesh anchor verification — BLAKE3-based byte-anchor check (the surviving 1-of-5 piece of the pre-Witness-Mesh grounding tribunal)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

# `vector` feature + ML judges (Judge 3 semantic cosine + Judge 4
# NLI cross-encoder) deleted in Witness Mesh cutover (2026-05-11).
# `LexicalJudge` + `unicode-segmentation` removed 2026-05-15 along
# with the ~175 MB of checked-in NLI ONNX models + tokenizer.
# What remains is a single mechanical BLAKE3 anchor-verification helper.

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-extract = { workspace = true }
tracing = { workspace = true }
# Witness anchor verification — BLAKE3 over source byte slices.
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
