[package]
name = "thinkingroot-paper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Living Paper synthesiser — produces a per-compile `paper.md` artefact with YAML frontmatter (machine-readable) + markdown body (human-readable) + Mermaid architecture diagrams from the ThinkingRoot Witness Mesh substrate."

[lib]
name = "thinkingroot_paper"
path = "src/lib.rs"

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
# Used to build in-memory `GraphStore` fixtures for synthesiser tests.
# Matches the same Cozo version pinned via the workspace dep table that
# `thinkingroot-graph` itself uses.
cozo = { workspace = true }
