[package]
name = "thinkingroot-reflect"
version = "0.9.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
rust-version = { workspace = true }
description = "Phase 9 Reflect — autonomous pattern discovery + known-unknown gap generation for ThinkingRoot knowledge graphs."

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
